recording 페이지에서 자동 녹음 기능 녹음 종료 기능 삽입 및 recording2 페이지 연결

--- a/meeting/templates/main.html
+++ b/meeting/templates/main.html
@@ -45,8 +45,9 @@
 
         <!-- 새 회의 만들기 -->
         <div class="create-meeting">
-          <a class="nav-link" href="{% url 'recording' %}">+ 새 회의 만들기</a>
+          <a id="nav-link" href="{% url 'recording' %}">+ 새 회의 만들기</a>
         </div>
+
 
         <div class="meeting-item">
           {% for key, value in session_data.items %} {{ value }} {% endfor %}
