--- a/meeting/templates/main.html
+++ b/meeting/templates/main.html
@@ -45,6 +45,11 @@
         align-items: center;
         padding: 10px 0;
         border-bottom: 1px solid #e9ecef;
+        cursor: pointer;
+        transition: background-color 0.3s;
+      }
+      .meeting-item:hover {
+        background-color: #f0f0f0;
       }
       .meeting-item:last-child {
         border-bottom: none;
@@ -75,7 +80,10 @@
       <div class="header">
         <button>알림함</button>
         {% if user.is_authenticated %}
-        <div>Welcome, {{ user.username }}!</div>
+        <div>{{ user.last_name }}{{ user.first_name }}님, 안녕하세요!</div>
+        {% else %}
+        <a href="{% url 'login' %}">로그인</a>
+        {% endif %}
       </div>
       <div class="meeting-list">
         <div class="d-flex justify-content-between align-items-center mb-3">
@@ -99,10 +107,13 @@
           </div>
         </div>
         <div class="create-meeting">
-          <span>+ 새 회의 만들기</span>
+          <a class="nav-link" href="{% url 'recording' %}">+ 새 회의 만들기</a>
         </div>
         {% for meeting in meetings %}
-        <div class="meeting-item">
+        <div
+          class="meeting-item"
+          onclick="location.href='{% url 'meeting_summary' meeting.id %}'"
+        >
           <div class="title">{{ meeting.title }}</div>
           <div class="date">
             {{ meeting.started_at|date:"Y-m-d H:i" }}<br />작성자 {{ meeting.host }}
