--- a/meeting/static/meeting/css/main.css
+++ b/meeting/static/meeting/css/main.css
@@ -2,7 +2,7 @@ body {
         font-family: "Noto Sans KR", sans-serif;
         background-color: #f8f9fa;
       }
-      .container {
+      .main-container {
         margin-top: 50px;
       }
       .header {
@@ -24,12 +24,54 @@ body {
         box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
         padding: 20px;
       }
-      .meeting-item {
+      .list-container {
+        width: 100%;
+        border-right: 1px solid #ccc;
+        overflow-y: auto;
+        padding: 20px;
+        transition: width 0.3s ease;
+      }
+      .list-container.split-view {
+        width: 30%;
+      }
+      .details-container {
+        width: 70%;
+        padding: 20px;
+        display: none;
+        background-color: #f4f4f4;
+        transition: transform 0.3s ease;
+        position: fixed;
+        top: 0;
+        right: 0;
+        height: 100%;
+        box-shadow: -2px 0 5px rgba(0,0,0,0.1);
+      }
+      .details-container.open {
+        display: block;
+      }
+      .list-item {
         display: flex;
         justify-content: space-between;
         align-items: center;
-        padding: 10px 0;
-        border-bottom: 1px solid #e9ecef;
+        padding: 15px;
+        margin-bottom: 15px;
+        background-color: #f8f9fa;
+        color: black;
+        cursor: pointer;
+        border-radius: 8px;
+        border: none;
+        font-size: 1em;
+        font-weight: bold;
+        transition: background-color 0.3s ease;
+      }
+      .list-item:hover {
+        background-color: #0056b3;
+      }
+      .list-item-title {
+        font-weight: bold;
+      }
+      .list-item-info {
+        font-size: 0.9em;
       }
       .meeting-item:last-child {
         border-bottom: none;
