Jquery 파일로 적용

--- a/meeting/templates/main.html
+++ b/meeting/templates/main.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <link rel="stylesheet" href="{% static 'meeting/jquery/jquery.css' %}" media="screen">
     <link rel="stylesheet" href="{% static 'meeting/css/main.css' %}" media="screen">
   </head>
   <body>
