--- a/meeting/static/meeting/css/recording.css
+++ b/meeting/static/meeting/css/recording.css
@@ -44,3 +44,95 @@ body {
     font-size: 1rem;
     color: #333;
 }
+
+.modal-content {
+  padding: 20px;
+  font-weight: bold; /* 모든 텍스트를 볼드로 설정 */
+}
+
+.modal-header, .modal-footer {
+  border-bottom: none;
+  border-top: none;
+}
+#finishModal{
+    font-weight : bold;
+    height: 100%;
+    width:100%;
+    margin-top: auto;
+    margin-bottom: auto;
+}
+
+.form-label {
+  margin-bottom: 5px; /* 레이블의 아래 마진 축소 */
+  text-align: left;
+}
+
+.form-control {
+  box-shadow: none;
+  border-radius: 0; /* 평평한 디자인을 위해 */
+  margin-bottom: 10px; /* 입력 필드의 아래 마진 조정 */
+}
+
+.modal-body {
+  padding: 15px; /* 내부 패딩 조정으로 높이 감소 */
+}
+
+.modal-footer {
+  padding: 10px 20px; /* 푸터 패딩 조정 */
+}
+
+.modal-text {
+  padding-top: 10px;
+  margin-bottom: 0; /* 추가적인 바닥간격 제거 */
+}
+
+.btn-primary {
+background-color: #007bff;
+border: none;
+}
+.btn-secondary {
+background-color: #6c757d;
+border: none;
+}
+.end-meeting-btn {
+position: absolute;
+bottom: 20px;
+background-color: #dc3545;
+border: none;
+color: white;
+padding: 10px 20px;
+border-radius: 5px;
+cursor: pointer;
+}
+.NickName-chip {
+display: inline-block;
+background-color: #e7f1ff;
+border-radius: 16px;
+padding: 5px 10px;
+margin: 5px 2px;
+font-size: 14px;
+}
+.NickName-chip .remove {
+margin-left: 8px;
+cursor: pointer;
+}
+.user_input {
+border: 1px solid #ced4da;
+padding: 8px;
+border-radius: 5px;
+width: 100%;
+}
+.NickName-input-container {
+display: flex;
+flex-wrap: wrap;
+align-items: center;
+border: 1px solid #ced4da;
+padding: 8px;
+border-radius: 5px;
+}
+.NickName-input-container input {
+border: none;
+outline: none;
+flex: 1;
+min-width: 150px;
+}
