--- a/meeting/templates/main.html
+++ b/meeting/templates/main.html
@@ -55,7 +55,7 @@
                 {% for meeting in meetings %}
                     <div class="list-item" onclick="toggleDetails('{{ meeting.id }}')">
                         <span class="list-item-title">{{ meeting.title }}</span>
-                        <span class="list-item-info">{{ meeting.started_at|date:"Y-m-d H:i" }} {{ meeting.host }}</span>
+<!--                        <span class="list-item-info">{{ meeting.started_at|date:"Y-m-d H:i" }} {{ meeting.host }}</span>-->
                     </div>
                 {% endfor %}
             </div>
