models.py 수정, views, template 수정 필요

--- a/meeting/templates/recording.html
+++ b/meeting/templates/recording.html
@@ -224,7 +224,7 @@
                     'X-CSRFToken': csrfToken
                 }
             });
-
+        console.log(response)
             if (response.ok) {
                 console.log('녹음 파일이 성공적으로 저장되었습니다.');
                 window.location.href = "{% url 'main' %}";
