meeting db 삽입, Recording.html에서 Modal에 title 입력 안할 시 다음 화면으로 넘어가지 않도록 방지

--- a/meeting/templates/main.html
+++ b/meeting/templates/main.html
@@ -42,7 +42,7 @@
                     {% for meeting in meetings %}
                         <div class="list-item" onclick="toggleDetails('{{ meeting.id }}')">
                             <span class="list-item-title">{{ meeting.title }}</span>
-    <!--                        <span class="list-item-info">{{ meeting.started_at|date:"Y-m-d H:i" }} {{ meeting.host }}</span>-->
+                            <span class="list-item-info">{{ meeting.started_at|date:"Y-m-d H:i" }}<br>{{ meeting.host }}</span>
                         </div>
                     {% endfor %}
                 </div>
