--- a/meeting/static/meeting/css/base.css
+++ b/meeting/static/meeting/css/base.css
@@ -4,6 +4,7 @@ html, body {
 }
 .main-container {
   min-height: 100vh;
+  margin-bottom: 20px;
 }
 .header {
   display: flex;
@@ -12,6 +13,7 @@ html, body {
   margin-left: 10px;
   margin-right: 10px;
   margin-bottom: 20px;
+  margin-top: 10px;
 }
 .header button {
   background-color: #e7f1ff;
