--- a/meeting/static/meeting/css/recording.css
+++ b/meeting/static/meeting/css/recording.css
@@ -36,6 +36,7 @@
     border-radius: 5px;
     cursor: pointer;
     margin-top: 50px;
+    justify-content: center;
 }
 .greeting {
     position: absolute;
