--- a/meeting/static/meeting/css/main.css
+++ b/meeting/static/meeting/css/main.css
@@ -68,8 +68,7 @@
   justify-content: center;
   align-items: center;
   background-color: #e7f1ff;
-  margin: 1px 11px;
-  padding: 10px;
+  margin: 11px;
   border-radius: 5px;
   margin-bottom: 20px;
   cursor: pointer;
