Recording css 수정

--- a/meeting/static/meeting/css/main.css
+++ b/meeting/static/meeting/css/main.css
@@ -71,6 +71,7 @@
   border-radius: 5px;
   margin-bottom: 20px;
   cursor: pointer;
+  padding: 10px;
 }
 .create-meeting:hover {
   background-color: #d0e4ff;
