--- a/meeting/templates/main.html
+++ b/meeting/templates/main.html
@@ -5,7 +5,7 @@
 
 {% block css %}
     {{ block.super }}
-    <link rel="stylesheet" href="{% static 'meeting/css/main.css' %}" media="screen">
+    <link rel="stylesheet" href="{% static 'meeting/css/main.css' %}?after" media="screen">
 {% endblock %}
 
 
