--- a/meeting/static/meeting/css/recording.css
+++ b/meeting/static/meeting/css/recording.css
@@ -1,9 +1,14 @@
 .recording-container {
     width: 100%;
-    border-right: 1px solid #ccc;
+    background-color: #ffffff;
     overflow-y: auto;
     padding: 10px;
-    transition: width 0.5s ease;
+    margin-top: auto;
+    margin-bottom: auto;
+    border: 1px solid black;
+    border-radius: 10px;
+
+
 }
 .wave {
     display: inline-block;
@@ -14,6 +19,7 @@
     height: 50px;
 }
 .listening-container {
+    margin-top: 10%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -26,6 +32,11 @@
 #stop-recording-button {
     margin-top: 20px;
 }
+.endButton-container{
+    margin-top: 5%;
+    margin-bottom: 10%;
+    text-align: center;
+}
 #end-button {
     margin-top: 50px;
     background-color: #ff6b6b;
@@ -36,7 +47,7 @@
     border-radius: 5px;
     cursor: pointer;
     margin-top: 50px;
-    justify-content: center;
+    display :inline-block;
 }
 .greeting {
     position: absolute;
