--- a/meeting/templates/base.html
+++ b/meeting/templates/base.html
@@ -15,7 +15,7 @@
 
 
       {% block css %}
-        <link rel="stylesheet" href="{% static 'meeting/css/base.css' %}">
+        <link rel="stylesheet" href="{% static 'meeting/css/base.css' %}?after">
       {% endblock %}
   </head>
   <body>
