전문 보기 Modal 삽입

--- a/meeting/static/meeting/css/main.css
+++ b/meeting/static/meeting/css/main.css
@@ -76,3 +76,9 @@
 .create-meeting:hover {
   background-color: #d0e4ff;
 }
+
+#contentDetail {
+  width: 100px;
+  display: block;
+  z-index: 1050;
+}
