--- a/meeting/templates/base.html
+++ b/meeting/templates/base.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Meeting Bridge {% block title %}{% endblock %}</title>
-
-    <link href="{% static 'meeting/bootstrap/bootstrap.css' %}" rel="stylesheet">
-    <script href="{% static 'meeting/bootstrap/bootstrap.bundle.min.js' %}" rel="stylesheet"></script>
+    <script src="{% static 'meeting/jquery/jquery.min.js' %}"></script>
+    <link href="{% static 'meeting/bootstrap/bootstrap.min.css' %}" rel="stylesheet">
+    <script src="{% static 'meeting/bootstrap/bootstrap.bundle.min.js' %}"></script>
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
       rel="stylesheet"
