--- a/meeting/templates/meeting_detail.html
+++ b/meeting/templates/meeting_detail.html
@@ -27,8 +27,12 @@
           {{participant}} {% endfor %}
         </p>
         <p>
-          <strong>확인자</strong><br />{% for participant in Participants %} {% if
-          participant.ischecker == 'True' %} {{ participant }} {% endfor %}
+          <strong>확인자</strong><br />
+          {% for participant in Participants %}
+            {% if participant.is_checker == 'True' %}
+              {{ participant }}
+            {% endif %}
+          {% endfor %}
         </p>
 
         <p><strong>회의 전문</strong></p>
