참여자 확인자 summary와 detail에서 출력

--- a/meeting/templates/meeting_detail.html
+++ b/meeting/templates/meeting_detail.html
@@ -23,15 +23,15 @@
       </div>
       <div class="card-body">
         <p>
-          <strong>참여자</strong><br />{% for participant in Participants %}
-          {{participant}} {% endfor %}
+          <strong>참여자</strong><br />
+          {% for user in users %}
+            {{user}}
+          {% endfor %}
         </p>
         <p>
           <strong>확인자</strong><br />
-          {% for participant in Participants %}
-            {% if participant.is_checker == 'True' %}
-              {{ participant }}
-            {% endif %}
+          {% for checkeruser in checkerusers %}
+            {% checkeruser %}}
           {% endfor %}
         </p>
 
